fix: update CORS allowed origins to include frontend URL